--- a/README
+++ b/README
@@ -1,2 +1,5 @@
 This repository will briefly disccuss on the papers subbmitted at the NIPS2019-Physical Science
 All papers discussed in this repository would be also reviewed in journal club (only for AMSG members)
+
+**Reference link**
+https://ml4physicalsciences.github.io/?fbclid=IwAR2Ll35PqpYFu5m93JlAAak7uXa80IZHJIWixw8pEU41thnFfWGQnzcYsec
